@@ -36,6 +36,7 @@
 # Path settings:
 # main uhexen2 relative path
 UHEXEN2_TOP:=../../..
+LIBS_DIR:=$(UHEXEN2_TOP)/libs
 # common sources path:
 COMMONDIR:=../../h2shared
 COMMON_HW:=../shared
