@@ -13,6 +13,7 @@
 # Path settings:
 # main uhexen2 relative path
 UHEXEN2_TOP:=../..
+LIBS_DIR:=$(UHEXEN2_TOP)/libs
 # where the common sources/objects are
 COMMONDIR:=../common
 
