@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2010-12-17 (CVS):
+    * Makefiles: Added LIBS_DIR as a new var defined as (UHEXEN2_TOP)/libs.
+
+2010-12-17 (CVS):
     * libs/timidity/q_endian.h: Added from the engine directory.
       timidity_internal.h: Include q_endian.h and use the provided macros.
       instrum.c, output.h: Adjusted for q_endian.h.
